Development
    libgmtk - gmtk_media_player set attribute for audio_channels
    Update tracker status message when pausing
    Disable tracker focus
    Fix minor issue with vcd://
    Detect UBUNTU_MENUPROXY and enable_global_menu = TRUE when not NULL
    Disable button focus on control bar
    Fix problem when chapters = 1, media really doesn't have chapters
    Fix stop in network/streaming mode
    Make sure mplayer is dead before quitting
    Try and solve the apple trailer issues, still may have issues
    When playing an ICY stream, clear the album metadata fixes problem when switching from MP3 to stream
    When playlist is open, don't resize the media window
    Fix up some problems with apple trailers, still may have problems
    Updated Polish translation
    Fix up some compiler warnings
    Correct GTK warning on gmtk_media_player allocation event
    Code fixes for older machines
    libgmtk - gmtk_media_player, Clamp the values in the alignment
    Implement subtitle fuzziness selection, Issue #474
    Add gconf/dconf key 'enable-global-menu' distros should set this to TRUE when using gnome global menu
    Remove GTK allocation warning caused by audio file, due to uninitialized values
    Flush GTK Events in resize window
    When initially loading a folder, check to see if it is a DVD 
    Ensure that the window id is not 0, before using it
    Fix crash when giving a device name that does not exist
    Disable xvmc if mplayer reports video_out incompatibility with codec
    Don't force ffmpeg12 codec with xvmc vo 
    Retry playback without accelerated divx if using vdpau and vdpau error 
    Properly display DVD Title in playlist and on window title
    Add support for crystalhd vo, untested as I don't have the hardware.
    Set the allocation to the height and width desired
    Make cursor hiding work in GTK3
    Select Subtitle by ID rather than by description + name
    Fix Issue #514
    Remove "percent" from idledata