@@ -71,7 +71,8 @@ typedef enum {
     ERROR_RETRY_WITH_HTTP,
     ERROR_RETRY_WITH_MMSHTTP,
     ERROR_RETRY_WITHOUT_DIVX_VDPAU,
-    ERROR_RETRY_WITHOUT_XVMC
+    ERROR_RETRY_WITHOUT_XVMC,
+	ERROR_RETRY_ALSA_BUSY
 } GmtkMediaPlayerPlaybackError;
 
 typedef enum {
