@@ -1,4 +1,5 @@
 Development
+    Keep restarting mplayer when ALSA device is busy and AO is alsa, sometimes Pulse is slow to release it
     libgmtk - gmtk_media_player set attribute for audio_channels
     Update tracker status message when pausing
     Disable tracker focus
